# CalendarAI

./: LICENSE  README.md  authorize_google.py  authorize_participant.py  calendar_server.py  holiday_server.py  main.py  pyproject.toml  server.py  summarize_utils.py  ui.py
